--- a/src/Ecentinela/ComiconvBundle/Resources/public/css/input.less
+++ b/src/Ecentinela/ComiconvBundle/Resources/public/css/input.less
@@ -70,6 +70,24 @@ body {
     #gradient .vertical(#efefef, #ccc);
 }
 
+br {
+    margin-bottom: 5px;
+}
+
+#progress {
+    position: absolute;
+    .size(29px, 499px);
+    .opacity(50);
+
+    div {
+        background-color: green;
+        left: 0;
+        position: relative;
+        top: 0;
+        .size(100%, 0);
+    }
+}
+
 #drop-area {
     display: block;
     margin: 40px auto auto;
@@ -96,7 +114,22 @@ body {
         }
     }
 
+    #fader {
+        background: #f5f5f5 url(/bundles/ecentinelacomiconv/images/loader.gif) no-repeat center center;
+        position: absolute;
+        z-index: -1;
+        .opacity(0);
+        .square(100%);
+        .transition(opacity .3s linear);
+
+        &.in {
+            z-index: 0;
+            .opacity(50);
+        }
+    }
+
     #table {
+        position: relative;
         width: 500px;
 
         .icon-move {
@@ -105,6 +138,25 @@ body {
 
         .icon-trash {
             cursor: pointer;
+        }
+
+        tr.uploading,
+        tr.error {
+            .icon-move,
+            .icon-trash {
+                display: none;
+            }
+        }
+
+        .dropover {
+            td {
+                background-color: @blue;
+                color: @white;
+            }
+
+            &.invalid td {
+                background-color: @red;
+            }
         }
     }
 }
