--- a/src/Ecentinela/ComiconvBundle/Resources/views/Default/input.html.twig
+++ b/src/Ecentinela/ComiconvBundle/Resources/views/Default/input.html.twig
@@ -90,7 +90,9 @@
                                 <td class="trash">
                                     <i class="icon-trash" rel="tooltip" title="Click to remove this file"></i>
                                 </td>
-                                <td class="retry"><button class="btn btn-danger">Retry</button></td>
+                                <td class="retry">
+                                    <i class="icon-repeat" rel="tooltip" title="Click to retry upload"></i>
+                                </td>
                             </tr>
                         </tbody>
 
