Fixing styles and javascript.

--- a/src/Ecentinela/ComiconvBundle/Resources/public/css/input.less
+++ b/src/Ecentinela/ComiconvBundle/Resources/public/css/input.less
@@ -81,7 +81,7 @@ br {
 #progress {
     position: absolute;
     z-index: 1;
-    .size(40px, 499px);
+    .size(30px, 499px);
 
     &.in {
         .opacity(50);
@@ -164,11 +164,12 @@ br {
 
         tr.error {
             td {
+                color: #fff;
                 #gradient > .vertical(#ee5f5b, #c43c35);
             }
 
             .icon-repeat {
-                display: block;
+                display: inline-block;
             }
         }
 
