--- a/src/Ecentinela/ComiconvBundle/Resources/views/Default/input.html.twig
+++ b/src/Ecentinela/ComiconvBundle/Resources/views/Default/input.html.twig
@@ -99,6 +99,10 @@
                         <tfoot>
                             <tr>
                                 <td colspan="5">
+                                    <select id="format">
+                                        <option value="cbz">Convert to CBZ</option>
+                                        <option value="pdf">Convert to PDF</option>
+                                    </select>
                                     <button class="btn btn-primary pull-right">{{ "input.upload" | trans }}</button>
                                 </td>
                             </tr>
