--- a/src/Ecentinela/ComiconvBundle/Resources/views/Default/input.html.twig
+++ b/src/Ecentinela/ComiconvBundle/Resources/views/Default/input.html.twig
@@ -8,7 +8,7 @@
         <meta name="description" content="Comic conversor between jpg, cbz, pdf, etc. files">
         <meta name="author" content="Javier Martinez Fernandez">
 
-        {% stylesheets output="all.css"
+        {% stylesheets output="input.min.css"
             "@EcentinelaComiconvBundle/Resources/public/css/input.less"
         %}
         <link href="{{ asset_url }}" rel="stylesheet" media="screen" />
@@ -26,6 +26,7 @@
     </head>
 
     <body id="body">
+        <a href="https://github.com/ecentinela/comiconv"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_red_aa0000.png" alt="{{ "input.form_me" }}"></a>
 
         <div class="navbar">
             <div class="navbar-inner">
@@ -100,8 +101,8 @@
                             <tr>
                                 <td colspan="5">
                                     <select id="format">
-                                        <option value="cbz">Convert to CBZ</option>
-                                        <option value="pdf">Convert to PDF</option>
+                                        <option value="cbz">{{ "input.convert_to_cbz" }}</option>
+                                        <option value="pdf">{{ "input.convert_to_pdf" }}</option>
                                     </select>
                                     <button class="btn btn-primary pull-right">{{ "input.upload" | trans }}</button>
                                 </td>
@@ -127,14 +128,14 @@
             </span>
         </div>
 
-        {% javascripts output="all.js"
+        {% javascripts output="input.min.js"
             "bundles/fosjsrouting/js/router.js"
             "bundles/bazingaexposetranslation/js/translation.js"
             "@EcentinelaComiconvBundle/Resources/public/jquery.js"
             "@EcentinelaComiconvBundle/Resources/public/canjs/can.jquery.js"
             "@EcentinelaComiconvBundle/Resources/public/jquerypp/jquerypp.js"
             "@EcentinelaComiconvBundle/Resources/public/bootstrap/js/bootstrap-tooltip.js"
-            "@EcentinelaComiconvBundle/Resources/public/bootstrap/js/*.js"
+            "@EcentinelaComiconvBundle/Resources/public/bootstrap/js/bootstrap-transition.js"
             "@EcentinelaComiconvBundle/Resources/public/plupload/js/plupload.full.js"
             "@EcentinelaComiconvBundle/Resources/public/js/input.coffee"
         %}
