--- a/src/Ecentinela/ComiconvBundle/Resources/public/css/input.less
+++ b/src/Ecentinela/ComiconvBundle/Resources/public/css/input.less
@@ -16,50 +16,46 @@
 
 // Base CSS
 @import "../bootstrap/less/type.less";
-@import "../bootstrap/less/code.less";
+// @import "../bootstrap/less/code.less";
 @import "../bootstrap/less/forms.less";
 @import "../bootstrap/less/tables.less";
 
 // Components: common
 @import "../bootstrap/less/sprites.less";
-@import "../bootstrap/less/dropdowns.less";
+// @import "../bootstrap/less/dropdowns.less";
 @import "../bootstrap/less/wells.less";
 @import "../bootstrap/less/component-animations.less";
-@import "../bootstrap/less/close.less";
+// @import "../bootstrap/less/close.less";
 
 // Components: Buttons & Alerts
 @import "../bootstrap/less/buttons.less";
-@import "../bootstrap/less/button-groups.less";
-@import "../bootstrap/less/alerts.less";
+// @import "../bootstrap/less/button-groups.less";
+// @import "../bootstrap/less/alerts.less";
 
 // Components: Nav
 @import "../bootstrap/less/navs.less";
 @import "../bootstrap/less/navbar.less";
-@import "../bootstrap/less/breadcrumbs.less";
-@import "../bootstrap/less/pagination.less";
-@import "../bootstrap/less/pager.less";
+// @import "../bootstrap/less/breadcrumbs.less";
+// @import "../bootstrap/less/pagination.less";
+// @import "../bootstrap/less/pager.less";
 
 // Components: Popovers
-@import "../bootstrap/less/modals.less";
+// @import "../bootstrap/less/modals.less";
 @import "../bootstrap/less/tooltip.less";
-@import "../bootstrap/less/popovers.less";
+// @import "../bootstrap/less/popovers.less";
 
 // Components: Misc
-@import "../bootstrap/less/thumbnails.less";
+// @import "../bootstrap/less/thumbnails.less";
 @import "../bootstrap/less/labels-badges.less";
 @import "../bootstrap/less/progress-bars.less";
-@import "../bootstrap/less/accordion.less";
-@import "../bootstrap/less/carousel.less";
-@import "../bootstrap/less/hero-unit.less";
+// @import "../bootstrap/less/accordion.less";
+// @import "../bootstrap/less/carousel.less";
+// @import "../bootstrap/less/hero-unit.less";
 
 // Utility classes
 @import "../bootstrap/less/utilities.less";
 
 // Comiconv
-#requirement-error {
-    text-align: center;
-}
-
 html,
 body {
     height: 100%;
@@ -76,6 +72,20 @@ body {
 
 br {
     margin-bottom: 5px;
+}
+
+.navbar-inner {
+    .border-radius(0);
+}
+
+#requirement-error {
+    text-align: center;
+}
+
+#github img {
+    position: absolute;
+    right: 0;
+    top: 0;
 }
 
 #progress {
