--- a/src/Ecentinela/ComiconvBundle/Resources/public/css/contact.less
+++ b/src/Ecentinela/ComiconvBundle/Resources/public/css/contact.less
@@ -24,13 +24,13 @@
 @import "../bootstrap/less/sprites.less";
 // @import "../bootstrap/less/dropdowns.less";
 @import "../bootstrap/less/wells.less";
-// @import "../bootstrap/less/component-animations.less";
-// @import "../bootstrap/less/close.less";
+@import "../bootstrap/less/component-animations.less";
+@import "../bootstrap/less/close.less";
 
 // Components: Buttons & Alerts
 @import "../bootstrap/less/buttons.less";
 // @import "../bootstrap/less/button-groups.less";
-// @import "../bootstrap/less/alerts.less";
+@import "../bootstrap/less/alerts.less";
 
 // Components: Nav
 @import "../bootstrap/less/navs.less";
@@ -42,7 +42,7 @@
 // Components: Popovers
 // @import "../bootstrap/less/modals.less";
 // @import "../bootstrap/less/tooltip.less";
-// @import "../bootstrap/less/popovers.less";
+@import "../bootstrap/less/popovers.less";
 
 // Components: Misc
 // @import "../bootstrap/less/thumbnails.less";
@@ -58,18 +58,38 @@
 // Comiconv
 @import "common.less";
 
-#download {
-    margin: 40px auto;
-    text-align: center;
-
-    p {
-        color: @grayDark;
-        font-size: 16px;
-        font-weight: bold;
+.container {
+    img {
+        .border-radius(5px);
     }
 
-    small {
-        color: @grayLight;
-        font-size: 12px;
+    .popover {
+        background-color: @grayDark;
+        display: block;
+        position: relative;
+        width: 600px;
+
+        .arrow {
+            border-top-color: @grayDark;
+            left: 24px;
+        }
+
+        p {
+            color: @grayLighter;
+            font-style: oblique;
+        }
+    }
+
+    .control-group:nth-child(2) {
+        .add-on,
+        textarea {
+            height: 60px;
+        }
+    }
+
+    .alert {
+        float: left;
+        margin: -6px 0 0 10px;
+        width: 120px;
     }
 }
