--- a/src/Ecentinela/ComiconvBundle/Resources/views/Default/output.html.twig
+++ b/src/Ecentinela/ComiconvBundle/Resources/views/Default/output.html.twig
@@ -14,8 +14,6 @@
     "bundles/bazingaexposetranslation/js/translation.js"
     "@EcentinelaComiconvBundle/Resources/public/jquery.js"
     "@EcentinelaComiconvBundle/Resources/public/canjs/can.jquery.js"
-    "@EcentinelaComiconvBundle/Resources/public/bootstrap/js/bootstrap-tooltip.js"
-    "@EcentinelaComiconvBundle/Resources/public/bootstrap/js/*.js"
     "@EcentinelaComiconvBundle/Resources/public/js/output.coffee"
 %}
 <script type="text/javascript" src="{{ asset_url }}"></script>
@@ -72,12 +70,12 @@
         <div id="notice">
             <hr />
 
-            <form class="form-inline">
+            <form class="form-inline" method="post" action="{{ path("output", { hash: conversion.hash }) }}">
                 <div class="input-prepend">
                     <div class="add-on">
                         <i class="icon-user"></i>
                     </div>
-                    <input type="email" class="input-large" placeholder="Email" />
+                    <input type="email" class="input-large" placeholder="{{ "output.email" | trans }}" />
                 </div>
 
                 <button class="btn btn-primary">{{ "output.send" | trans }}</button>
