Removed About page.

--- a/src/Ecentinela/ComiconvBundle/Resources/public/css/common.less
+++ b/src/Ecentinela/ComiconvBundle/Resources/public/css/common.less
@@ -5,11 +5,8 @@ body {
 
 body {
     overflow-x: hidden;
+    padding-top: 60px;
     #gradient .vertical(#efefef, #ccc);
-}
-
-.navbar-inner {
-    .border-radius(0);
 }
 
 #requirement-error {
