--- a/src/Ecentinela/ComiconvBundle/Resources/views/layout.html.twig
+++ b/src/Ecentinela/ComiconvBundle/Resources/views/layout.html.twig
@@ -22,6 +22,28 @@
     </head>
 
     <body id="body">
+        <a href="https://github.com/ecentinela/comiconv" id="github"><img src="https://s3.amazonaws.com/github/ribbons/forkme_right_red_aa0000.png" alt="{{ "input.form_me" }}"></a>
+
+        <div class="navbar navbar-fixed-top">
+            <div class="navbar-inner">
+                <div class="container">
+                    <a class="brand" href="{{ path("input") }}">Comic Conversor</a>
+
+                    <ul class="nav pull-right">
+                        <li>
+                            <a href="{{ path("contact") }}">
+                                <i class="icon-envelope icon-white"></i>
+                                <span>{{ "input.contact" | trans }}</span>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+
+        <noscript id="requirement-error">
+            <h3>{{ "input.enable_javascript" | trans }}</h3>
+        </noscript>
         {% block body %}{% endblock body %}
 
         {% block javascripts %}{% endblock javascripts %}
