--- a/src/Ecentinela/ComiconvBundle/Resources/public/css/input.less
+++ b/src/Ecentinela/ComiconvBundle/Resources/public/css/input.less
@@ -150,6 +150,13 @@ br {
             }
         }
 
+        tr.uploaded {
+            td {
+                color: #fff;
+                #gradient > .vertical(#62c462, #57a957);
+            }
+        }
+
         tr.error {
             td {
                 color: #fff;
