--- a/src/Ecentinela/ComiconvBundle/Resources/public/css/common.less
+++ b/src/Ecentinela/ComiconvBundle/Resources/public/css/common.less
@@ -1,5 +1,4 @@
-html,
-body {
+html {
     height: 100%;
 }
 
@@ -17,4 +16,5 @@ body {
     position: absolute;
     right: 0;
     top: 0;
+    z-index: 1031;
 }
