--- a/src/Ecentinela/ComiconvBundle/Resources/views/layout.html.twig
+++ b/src/Ecentinela/ComiconvBundle/Resources/views/layout.html.twig
@@ -27,7 +27,7 @@
         <div class="navbar navbar-fixed-top">
             <div class="navbar-inner">
                 <div class="container">
-                    <a class="brand" href="{{ path("input") }}">Comic Conversor</a>
+                    <a class="brand" href="{{ path("input") }}">Comic Conversor (Beta)</a>
 
                     <ul class="nav pull-right">
                         <li>
