--- a/src/Ecentinela/ComiconvBundle/Resources/views/Default/output.html.twig
+++ b/src/Ecentinela/ComiconvBundle/Resources/views/Default/output.html.twig
@@ -51,7 +51,7 @@
             <form class="form-inline" method="post" action="{{ path("output", { hash: conversion.hash }) }}">
                 <div class="input-prepend">
                     <div class="add-on">
-                        <i class="icon-user"></i>
+                        <i class="icon-envelope"></i>
                     </div>
                     <input type="email" class="input-large" placeholder="{{ "output.email" | trans }}" />
                 </div>
