--- a/src/Ecentinela/ComiconvBundle/Resources/views/layout.html.twig
+++ b/src/Ecentinela/ComiconvBundle/Resources/views/layout.html.twig
@@ -14,11 +14,11 @@
         <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
         <![endif]-->
 
-        <link rel="shortcut icon" href="../assets/ico/favicon.ico">
-        <link rel="apple-touch-icon-precomposed" sizes="144x144" href="../assets/ico/apple-touch-icon-144-precomposed.png">
-        <link rel="apple-touch-icon-precomposed" sizes="114x114" href="../assets/ico/apple-touch-icon-114-precomposed.png">
-        <link rel="apple-touch-icon-precomposed" sizes="72x72" href="../assets/ico/apple-touch-icon-72-precomposed.png">
-        <link rel="apple-touch-icon-precomposed" href="../assets/ico/apple-touch-icon-57-precomposed.png">
+        <link rel="shortcut icon" href="{{ asset("bundles/ecentinelacomiconv/images/favicon.ico") }}">
+        <link rel="apple-touch-icon-precomposed" sizes="144x144" href="{{ asset("bundles/ecentinelacomiconv/images/apple-touch-icon-144-precomposed.png") }}">
+        <link rel="apple-touch-icon-precomposed" sizes="114x114" href="{{ asset("bundles/ecentinelacomiconv/images/apple-touch-icon-114-precomposed.png") }}">
+        <link rel="apple-touch-icon-precomposed" sizes="72x72" href="{{ asset("bundles/ecentinelacomiconv/images/apple-touch-icon-72-precomposed.png") }}">
+        <link rel="apple-touch-icon-precomposed" href="{{ asset("bundles/ecentinelacomiconv/images/apple-touch-icon-57-precomposed.png") }}">
     </head>
 
     <body id="body">
@@ -44,6 +44,7 @@
         <noscript id="requirement-error">
             <h3>{{ "input.enable_javascript" | trans }}</h3>
         </noscript>
+
         {% block body %}{% endblock body %}
 
         {% block javascripts %}{% endblock javascripts %}
