Replace closure by uglify-js.

--- a/src/Ecentinela/ComiconvBundle/Resources/views/Default/contact.html.twig
+++ b/src/Ecentinela/ComiconvBundle/Resources/views/Default/contact.html.twig
@@ -9,7 +9,7 @@
 {% endblock stylesheets %}
 
 {% block javascripts %}
-{% javascripts output="js/contact.min.js" filter="closure"
+{% javascripts output="js/contact.min.js" filter="uglifyjs"
     "@EcentinelaComiconvBundle/Resources/public/jquery.js"
     "@EcentinelaComiconvBundle/Resources/public/canjs/can.jquery.js"
     "@EcentinelaComiconvBundle/Resources/public/js/contact.coffee"
