--- a/src/Ecentinela/ComiconvBundle/Resources/views/Default/output.html.twig
+++ b/src/Ecentinela/ComiconvBundle/Resources/views/Default/output.html.twig
@@ -9,7 +9,7 @@
 {% endblock stylesheets %}
 
 {% block javascripts %}
-{% javascripts output="js/output.min.js" filter="closure"
+{% javascripts output="js/output.min.js" filter="uglifyjs"
     "bundles/fosjsrouting/js/router.js"
     "bundles/bazingaexposetranslation/js/translation.js"
     "@EcentinelaComiconvBundle/Resources/public/jquery.js"
