--- a/src/Ecentinela/ComiconvBundle/Resources/views/layout.html.twig
+++ b/src/Ecentinela/ComiconvBundle/Resources/views/layout.html.twig
@@ -14,7 +14,7 @@
         <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
         <![endif]-->
 
-        <link rel="shortcut icon" href="{{ asset("bundles/ecentinelacomiconv/images/favicon.ico") }}">
+        <link rel="shortcut icon" href="{{ asset("favicon.ico") }}">
         <link rel="apple-touch-icon-precomposed" sizes="144x144" href="{{ asset("bundles/ecentinelacomiconv/images/apple-touch-icon-144-precomposed.png") }}">
         <link rel="apple-touch-icon-precomposed" sizes="114x114" href="{{ asset("bundles/ecentinelacomiconv/images/apple-touch-icon-114-precomposed.png") }}">
         <link rel="apple-touch-icon-precomposed" sizes="72x72" href="{{ asset("bundles/ecentinelacomiconv/images/apple-touch-icon-72-precomposed.png") }}">
