Don't use yui compressor. Use less itself.

--- a/src/Ecentinela/ComiconvBundle/Resources/views/Default/output.html.twig
+++ b/src/Ecentinela/ComiconvBundle/Resources/views/Default/output.html.twig
@@ -1,7 +1,7 @@
 {% extends "EcentinelaComiconvBundle::layout.html.twig" %}
 
 {% block stylesheets %}
-{% stylesheets output="css/output.min.css" filter="yui_css"
+{% stylesheets output="css/output.min.css"
     "@EcentinelaComiconvBundle/Resources/public/css/output.less"
 %}
 <link href="{{ asset_url }}" rel="stylesheet" media="screen" />
